--- a/Atividade Tabela/css/atividadeTabela.css
+++ b/Atividade Tabela/css/atividadeTabela.css
@@ -3,13 +3,10 @@ h1{text-align: center;}
 
 table, tr, th, td{border: 1px solid black; border-collapse: collapse; padding: 10px;}
 
-table{margin: 10px auto; width: 50%; border-collapse: collapse;}
+table{margin: 0 auto; width: 50%; border-collapse: collapse;}
 
 thead{background-color: green;}
 
-tbody > tr:nth-child(1){background-color: olive;}
+tbody > tr:nth-child(1), tbody > tr:nth-child(3), tbody > tr:nth-child(7), tbody > tr:nth-child(9){background-color: olive;}
 
-tbody > tr:nth-child(3){background-color: olive;}
 tbody > tr:nth-child(5){background-color: chartreuse;}
-tbody > tr:nth-child(7){background-color: olive;}
-tbody > tr:nth-child(9){background-color: olive;}
